--- a/6 Avançado em Imagens Docker com Dockerfile/10.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/10.md
@@ -1,122 +1,215 @@
-# EXPOSE no Dockerfile
-A instrução `EXPOSE` no Dockerfile documenta as **portas** que o contêiner utilizará para comunicação. Essa instrução é usada para indicar quais portas o serviço do contêiner escutará, **mas não publica ou mapeia as portas automaticamente**.
+# Volumes no Docker
+Volumes no Docker são uma forma de persistir dados para que não sejam perdidos quando um contêiner é removido. Eles permitem armazenar e compartilhar dados entre contêineres, o host e até mesmo múltiplas máquinas, dependendo da configuração.
 
-# 1. Funcionamento da Instrução EXPOSE
-- **Definição**: Declara que o contêiner estará escutando em uma ou mais portas específicas.
-- **Função**: Serve como documentação e pode ser usada por ferramentas de orquestração para configurar a rede do contêiner.
+# 1. O Que É um Volume no Docker?
+- Um **volume** é um diretório ou arquivo externo ao sistema de arquivos do contêiner.
+- Ele é gerenciado pelo Docker, separado do ciclo de vida do contêiner.
+- Os volumes são usados para:
+   - **Persistência de dados**: Mantêm os dados após o contêiner ser reiniciado ou removido.
+   - **Compartilhamento de dados**: Entre contêineres ou entre o contêiner e o host.
+   - **Performance**: São mais eficientes do que montagens diretas do sistema de arquivos do host.
 
-# 2. Sintaxe do EXPOSE
-
-dockerfile
-```
-EXPOSE <porta>[/protocolo]
-```
-- `<porta>`: Número da porta que o contêiner usará.
-- `/protocolo`: O protocolo pode ser `tcp` (padrão) ou `udp`. Se não especificado, o protocolo será `tcp`.
-
-### Exemplos:
-1. Expor a porta 80 (HTTP):
-
-dockerfile
-```
-EXPOSE 80
-```
-2. Expor a porta 53 com UDP:
-
-dockerfile
-```
-EXPOSE 53/udp
-```
-3. Expor múltiplas portas:
-
-dockerfile
-```
-EXPOSE 80 443 3000
-```
-# 3. EXPOSE na Prática
-## 3.1 Comportamento com `docker run`
-Mesmo declarada no Dockerfile, a porta não é publicada automaticamente. Você precisa usar a flag `-p` ou `-P` ao rodar o contêiner:
-
-1. **Mapear manualmente uma porta (`-p`)**:
+# 2. Tipos de Volumes
+## 2.1 Volumes Gerenciados
+- Criados e gerenciados automaticamente pelo Docker.
+- Exemplo:
 
 bash
 ```
-docker run -p 8080:80 minha-imagem
+docker volume create meu-volume
 ```
-- `8080:80`: A porta 8080 no host será mapeada para a porta 80 no contêiner.
-
-2. **Publicar todas as portas declaradas (`-P`)**:
+## 2.2 Bind Mounts
+- Montam diretórios ou arquivos do sistema de arquivos do host diretamente no contêiner.
+- Exemplo:
 
 bash
 ```
-docker run -P minha-imagem
+docker run -v /caminho/host:/caminho/container imagem
 ```
-- O Docker mapeia automaticamente todas as portas declaradas no `EXPOSE` para portas aleatórias no host.
+## 2.3 tmpfs Mounts
+- Criados na memória e não são persistentes.
+- Úteis para dados temporários que não precisam ser salvos.
+- Exemplo:
 
-# 4. Exemplo Completo
-## Dockerfile
-Crie um Dockerfile para uma aplicação web simples:
+bash
+```
+docker run --tmpfs /caminho/container imagem
+```
+# 3. Criando e Usando Volumes
+## 3.1 Criar um Volume
 
+bash
+```
+docker volume create meu-volume
+```
+- Nomeie o volume como `meu-volume`.
+- Verifique os volumes existentes:
+
+bash
+```
+docker volume ls
+```
+## 3.2 Usar um Volume em um Contêiner
+
+bash
+```
+docker run -d --name meu-container -v meu-volume:/dados nginx
+```
+- Monta o volume `meu-volume` no diretório `/dados` dentro do contêiner.
+- Todos os dados gravados em `/dados` no contêiner serão armazenados no volume.
+
+## 3.3 Compartilhar Volume entre Contêineres
+
+bash
+```
+docker run -d --name container1 -v meu-volume:/dados nginx
+docker run -d --name container2 -v meu-volume:/dados busybox
+```
+- Ambos os contêineres compartilham os mesmos dados em `/dados`.
+
+## 3.4 Bind Mounts
+bash
+```
+docker run -d --name meu-container -v /caminho/no/host:/dados nginx
+```
+- O diretório `/caminho/no/host` será montado como `/dados` dentro do contêiner.
+- Útil para compartilhar arquivos do host com o contêiner.
+
+# 4. Inspecionando Volumes
+## 4.1 Verificar Detalhes de um Volume
+bash
+```
+docker volume inspect meu-volume
+```
+### Saída:
+
+json
+```
+[
+  {
+    "Name": "meu-volume",
+    "Driver": "local",
+    "Mountpoint": "/var/lib/docker/volumes/meu-volume/_data",
+    "Scope": "local"
+  }
+]
+```
+- `Mountpoint`: Caminho no sistema do host onde os dados do volume são armazenados.
+
+# 5. Removendo Volumes
+## 5.1 Remover um Volume
+bash
+```
+docker volume rm meu-volume
+```
+## 5.2 Limpar Volumes Não Utilizados
+Remove todos os volumes que não estão em uso por nenhum contêiner:
+
+bash
+```
+docker volume prune
+```
+# 6. Volumes no Docker Compose
+Volumes são frequentemente usados com o Docker Compose para configurar aplicações multi-contêineres.
+
+## Exemplo: docker-compose.yml
+yaml
+```
+version: '3.8'
+services:
+  app:
+    image: nginx
+    volumes:
+      - dados:/dados
+volumes:
+  dados:
+```
+- `dados` é um volume gerenciado pelo Docker.
+
+# 7. Práticas Avançadas com Volumes
+## 7.1 Inicializar um Volume com Dados
+Use `--mount` para copiar dados ao criar um contêiner:
+
+bash
+```
+docker run -v meu-volume:/dados --name init-container busybox sh -c "echo 'dados iniciais' > /dados/arquivo.txt"
+```
+## 7.2 Backup e Restore de Volumes
+## Backup:
+
+bash
+```
+docker run --rm -v meu-volume:/dados -v $(pwd):/backup busybox tar cvf /backup/meu-volume.tar /dados
+```
+## Restore:
+
+bash
+```
+docker run --rm -v meu-volume:/dados -v $(pwd):/backup busybox tar xvf /backup/meu-volume.tar -C /dados
+```
+# 8. Comparação: Volumes Gerenciados vs Bind Mounts
+| Aspecto       | Volumes Gerenciados        | Bind Mounts                     |
+| ------------- | -------------------------- | ------------------------------- |
+| Localização   | Gerenciado pelo Docker     | Diretório do sistema do host    |
+| Portabilidade | Fácil de mover entre hosts | Depende da estrutura do host    |
+| Performance   | Otimizado para contêineres | Pode ter impacto de performance |
+| Uso           | Persistência genérica      | Acesso a arquivos específicos   |
+
+# 9. Boas Práticas com Volumes
+1. **Use Volumes para Dados Persistentes**:
+   - Preferível a bind mounts, especialmente em produção.
+
+2. **Não Armazene Dados Importantes Diretamente no Contêiner**:
+   - Dados armazenados no sistema de arquivos do contêiner serão perdidos ao removê-lo.
+
+3. **Automatize Configurações com Docker Compose**:
+   - Facilita a configuração de volumes entre múltiplos serviços.
+
+4. **Gerencie Permissões**:
+   - Garanta que os diretórios no host tenham permissões adequadas ao usar bind mounts.
+
+5. **Limpeza Regular**:
+   - Use docker volume prune para remover volumes não utilizados e liberar espaço.
+
+# 10. Exemplo Completo
+## Dockerfile com Volume
 dockerfile
 ```
 FROM nginx:alpine
 
-# Copiar um arquivo de exemplo para o servidor
-COPY index.html /usr/share/nginx/html/
-
-# Declarar a porta padrão do Nginx
+# Expor a porta padrão do nginx
 EXPOSE 80
+
+# Declarar o volume
+VOLUME /dados
+
+CMD ["nginx", "-g", "daemon off;"]
 ```
-## Construindo a Imagem
-1. Construa a imagem:
+### Passos:
+
+1. Construir a imagem:
 
 bash
 ```
-docker build -t minha-aplicacao .
+docker build -t nginx-volume .
 ```
-2. Liste a imagem:
+2. Rodar o contêiner com um volume:
 
 bash
 ```
-docker images
+docker run -d -v meu-volume:/dados nginx-volume
 ```
-## Executando o Contêiner
-1. Execute a imagem mapeando manualmente a porta:
+3. Testar persistência:
+- Adicione arquivos em `/dados` no contêiner e verifique a persistência no volume.
 
-bash
-```
-docker run -d -p 8080:80 minha-aplicacao
-```
-2. Acesse a aplicação no navegador:
-- http://localhost:8080
+# 11. Conclusão
+Os volumes são uma ferramenta essencial no Docker para persistir e compartilhar dados entre contêineres e o host. Eles oferecem flexibilidade, performance e facilidade de uso em comparação com o armazenamento direto no sistema de arquivos do contêiner.
 
-3. Teste publicando automaticamente as portas (`-P`):
+## Resumo:
+- **Volumes Gerenciados**: Melhor opção para persistência em produção.
+- **Bind Mounts**: Útil para acessar arquivos do host.
+- **Práticas Recomendadas**:
+   - Use volumes para persistir dados importantes.
+   - Configure volumes com Docker Compose para maior facilidade.
 
-bash
-```
-docker run -d -P minha-aplicacao
-```
-4. Verifique as portas publicadas:
-
-bash
-```
-docker ps
-```
-# 5. EXPOSE como Documentação
-A principal função do `EXPOSE` é documentar as portas usadas pela aplicação. Mesmo que você não publique as portas com `-p` ou `-P`, o EXPOSE informa a outros desenvolvedores e ferramentas como Kubernetes quais portas o contêiner está preparado para usar.
-
-
-## Exemplo com Múltiplas Portas
-Imagine uma aplicação que usa várias portas, como um servidor web e um banco de dados interno:
-
-dockerfile
-```
-FROM ubuntu:20.04
-
-# Expor portas para diferentes serviços
-EXPOSE 80      # Servidor web
-EXPOSE 3306    # Banco de dados MySQL
-EXPOSE 3000/tcp
-EXPOSE 4000/udp
-Esse Dockerfile informa que o contêiner escutará nas portas 80, 3306 (MySQL), 3000/tcp e 4000/udp.
-```
+Se precisar de ajuda com configurações avançadas ou outros exemplos, é só perguntar! 🚀😊
