--- a/6 Avançado em Imagens Docker com Dockerfile/11.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/11.md
@@ -1,240 +1,224 @@
-# USER no Dockerfile
-A instrução `USER` no Dockerfile define qual **usuário** será usado para executar os comandos dentro do contêiner, incluindo os comandos especificados em instruções como `RUN`, `CMD`, e `ENTRYPOINT`. Por padrão, os contêineres são executados como o usuário **root**, o que pode representar riscos de segurança.
+# ARG no Dockerfile
+A instrução `ARG` no Dockerfile é usada para definir **variáveis de build** que podem ser passadas para o Docker durante o processo de construção da imagem. Diferente das variáveis definidas com `ENV`, as variáveis `ARG` só estão disponíveis **durante o build** e não no contêiner em tempo de execução.
 
-# 1. Sintaxe do USER
-
+# 1. Sintaxe do ARG
 dockerfile
 ```
-USER <nome_do_usuário>[:grupo]
+ARG <nome>=<valor_padrão>
 ```
-- `<nome_do_usuário>`: Define o nome ou o ID do usuário.
-- `[:grupo]`: (Opcional) Define o grupo do usuário. Se não for especificado, o Docker usará o grupo padrão do usuário.
+- `<nome>`: Nome da variável de build.
+- `<valor_padrão> (opcional)`: Valor atribuído à variável, caso não seja passado no momento do build.
 
-## Exemplos:
-1. Usar o usuário `nobody`:
+# 2. Diferenças entre ARG e ENV
+| Aspecto              | `ARG`                              | `ENV`                                      |
+| -------------------- | ---------------------------------- | ------------------------------------------ |
+| Disponibilidade      | Apenas durante o build da imagem.  | Disponível durante o build e no contêiner. |
+| Sobrescrita no Build | Passada com `--build-arg`.         | Não pode ser sobrescrita diretamente.      |
+| Persistência         | Não é incluída no contêiner final. | Incluída no contêiner final.               |
 
+# 3. Exemplos de Uso
+## 3.1 Definir e Usar uma Variável ARG
 dockerfile
 ```
-USER nobody
+FROM ubuntu:20.04
+
+# Definir uma variável ARG
+ARG VERSAO=1.0
+
+# Usar a variável ARG
+RUN echo "Construindo a versão $VERSAO"
 ```
+## Construindo a Imagem:
 
-2. Usar um usuário com grupo específico:
-
-dockerfile
+bash
 ```
-USER myuser:mygroup
+docker build -t minha-imagem:1.0 .
 ```
-
-3. Usar IDs numéricos:
-
-dockerfile
-```
-USER 1001:1001
-```
-# 2. Por Que Usar USER?
-1. **Segurança**:
-   - Reduz privilégios, minimizando os riscos em caso de falhas ou ataques.
-   - Evita que processos maliciosos comprometam o sistema host.
-
-2. **Isolamento**:
-   - Diferentes usuários podem ser configurados para tarefas específicas no contêiner.
-
-3. **Boas Práticas**:
-   - É uma prática recomendada nunca executar contêineres como **root**, a menos que seja estritamente necessário.
-
-# 3. Criando e Usando Usuários no Dockerfile
-Se o usuário que você deseja usar não existir na imagem base, é necessário criá-lo antes de configurá-lo com a instrução `USER`.
-
-## 3.1 Criar um Usuário no Dockerfile
-Você pode usar o comando `RUN` para criar um novo usuário e grupo.
-
-## Exemplo:
+## 3.2 Passar um Valor Durante o Build
+Você pode sobrescrever o valor padrão de uma variável `ARG` ao construir a imagem:
 
 dockerfile
 ```
 FROM ubuntu:20.04
 
-# Criar um usuário e um grupo
-RUN groupadd -r mygroup && useradd -r -g mygroup myuser
-
-# Definir o usuário para os comandos subsequentes
-USER myuser
+ARG VERSAO=1.0
+RUN echo "Versão padrão: $VERSAO"
 ```
-## 3.2 Usar um Diretório de Trabalho Personalizado
-Se o contêiner precisa de um diretório de trabalho específico, crie-o com as permissões corretas antes de usar `USER`.
+## Construindo a Imagem com um Novo Valor:
 
-### Exemplo:
+bash
+```
+docker build --build-arg VERSAO=2.0 -t minha-imagem:2.0 .
+```
+## Saída Esperada:
+
+```
+Versão padrão: 2.0
+```
+## 3.3 Usando Múltiplos ARGs
+dockerfile
+```
+FROM ubuntu:20.04
+
+ARG APP_NOME="Minha App"
+ARG APP_PORTA=8080
+
+RUN echo "Aplicação: $APP_NOME, Porta: $APP_PORTA"
+```
+## Construindo com Valores Sobrescritos:
+
+bash
+```
+docker build --build-arg APP_NOME="App de Teste" --build-arg APP_PORTA=9090 -t app:latest .
+```
+## 3.4 Usando ARG com ENV
+Você pode usar um `ARG` para definir o valor de uma variável `ENV`. Isso torna o valor do `ARG` acessível no contêiner em tempo de execução.
 
 dockerfile
 ```
 FROM ubuntu:20.04
 
-# Criar um usuário e definir o diretório de trabalho
-RUN useradd -m -d /home/myuser myuser
-RUN mkdir -p /app && chown myuser:myuser /app
+ARG APP_PORTA=8080
+ENV PORT=$APP_PORTA
 
-# Alterar para o diretório de trabalho
-WORKDIR /app
-
-# Usar o usuário criado
-USER myuser
-
-# Adicionar os arquivos
-COPY . .
-CMD ["bash"]
+CMD ["bash", "-c", "echo Porta em execução: $PORT"]
 ```
-## 3.3 Reverter para Root (Se Necessário)
-Caso você precise executar comandos como **root** temporariamente, use `USER root` no Dockerfile para reverter os privilégios.
-
-### Exemplo:
-
-dockerfile
-```
-FROM ubuntu:20.04
-
-# Criar um usuário
-RUN useradd -m -d /home/myuser myuser
-
-# Usar o usuário criado
-USER myuser
-
-# Reverter temporariamente para root
-USER root
-RUN apt-get update && apt-get install -y curl
-
-# Voltar para o usuário criado
-USER myuser
-```
-# 4. Testando o Usuário no Contêiner
-## Passo 1: Criar o Dockerfile
-
-dockerfile
-```
-FROM ubuntu:20.04
-
-# Criar usuário e diretório de trabalho
-RUN useradd -m -d /home/myuser myuser
-WORKDIR /home/myuser
-
-# Usar o usuário criado
-USER myuser
-
-CMD ["whoami"]
-```
-## Passo 2: Construir a Imagem
+## Construindo a Imagem:
 
 bash
 ```
-docker build -t teste-user .
+docker build --build-arg APP_PORTA=3000 -t app-com-env .
 ```
-## Passo 3: Executar o Contêiner
+## Executando o Contêiner:
 
 bash
 ```
-docker run --rm teste-user
+docker run app-com-env
 ```
-### Saída Esperada:
+## Saída:
 
+css
 ```
-myuser
+Porta em execução: 3000
 ```
-# 5. Sobrescrevendo o Usuário em Tempo de Execução
-Se você quiser executar um contêiner com um usuário diferente daquele especificado no Dockerfile, use a flag `--use`r ao executar o contêiner:
-
-## Exemplo:
-bash
+# 3.5 Usando ARG em Imagens Base Dinâmicas
+dockerfile
 ```
-docker run --user 1000:1000 minha-imagem
+ARG BASE_IMAGE=ubuntu:20.04
+FROM $BASE_IMAGE
+
+RUN echo "Imagem base usada: $BASE_IMAGE"
 ```
-Aqui:
-
-- `1000:1000`: O contêiner será executado com o usuário de ID `1000` e grupo `1000`.
-
-# 6. Verificando o Usuário no Contêiner
-Você pode usar os seguintes comandos dentro do contêiner para verificar o usuário atual:
-
-1. **Verificar o Nome do Usuário**:
+## Construindo com uma Imagem Base Diferente:
 
 bash
 ```
-whoami
+docker build --build-arg BASE_IMAGE=alpine:3.14 -t minha-imagem .
 ```
-2. **Verificar o ID do Usuário**:
-
-bash
-```
-id
-```
-### Saída Exemplo:
-
-scss
-```
-uid=1001(myuser) gid=1001(mygroup) groups=1001(mygroup)
-```
-# 7. Boas Práticas com USER
-1. **Sempre Evite Root**:
-   - Use `USER` para reduzir privilégios sempre que possível.
-
-2. **Crie Usuários em Imagens Base Minimalistas**:
-   - Imagens como **Alpine** não possuem comandos como `useradd` ou `groupadd`. Use:
+# 4. Listando Argumentos de Build no Dockerfile
+Você pode listar os argumentos disponíveis para o build no `Dockerfile` usando `ARG` sem valor padrão.
 
 dockerfile
 ```
-RUN addgroup -S mygroup && adduser -S myuser -G mygroup
+ARG APP_NAME
+ARG APP_VERSION
 ```
-3. **Gerencie Permissões Corretamente**:
-   - Certifique-se de que os arquivos e diretórios necessários no contêiner têm permissões corretas:
+Esses argumentos podem ser passados durante o build:
+
+bash
+```
+docker build --build-arg APP_NAME=Teste --build-arg APP_VERSION=1.2 .
+```
+# 5. Restrições do ARG
+1. **Não Disponível no Contêiner**:
+   - Variáveis `ARG` não estão disponíveis no contêiner final, a menos que sejam usadas para definir `ENV`.
+
+2. **Não Persistentes**:
+  - Não são incluídas nas camadas da imagem, exceto se forem explicitamente usadas em comandos como `RUN`.
+
+3. **Necessidade de Definição Anterior**:
+   - Se você quiser usar um `ARG` antes de sua definição, o Docker retornará um erro.
+
+# 6. Usos Comuns do ARG
+## 6.1 Configuração de Build
+Passar parâmetros como o nome, a versão da aplicação ou a porta que a aplicação irá usar.
+
+## 6.2 Escolha de Imagem Base
+Criar imagens dinâmicas que podem usar diferentes versões de imagens base.
+
+## 6.3 Informações Dinâmicas
+Configurar o comportamento do build com base em variáveis passadas no momento da construção.
+
+# 7. Exemplo Completo
+## Dockerfile
+dockerfile
+```
+# Definir argumentos para o build
+ARG APP_NAME="Minha Aplicação"
+ARG APP_VERSION="1.0.0"
+
+# Usar uma imagem base dinâmica
+ARG BASE_IMAGE=alpine:3.14
+FROM $BASE_IMAGE
+
+# Adicionar argumentos como variáveis de ambiente
+ENV APP_NAME=$APP_NAME
+ENV APP_VERSION=$APP_VERSION
+
+# Exibir informações no build
+RUN echo "Construindo $APP_NAME versão $APP_VERSION na base $BASE_IMAGE"
+
+# Configuração do contêiner
+CMD ["sh", "-c", "echo Executando $APP_NAME versão $APP_VERSION"]
+```
+## Construindo a Imagem
+bash
+```
+docker build --build-arg APP_NAME="App de Exemplo" --build-arg APP_VERSION="2.0.0" -t app-exemplo .
+```
+## Executando o Contêiner
+bash
+```
+docker run app-exemplo
+```
+## Saída:
+
+```
+Executando App de Exemplo versão 2.0.0
+```
+# 8. Boas Práticas com ARG
+1. **Defina Valores Padrão**:
+- Sempre forneça valores padrão para `ARG` para evitar erros:
 
 dockerfile
 ```
-RUN chown myuser:mygroup /path/to/files
+ARG APP_VERSION=1.0.0
 ```
-4. **Documente Usuários e Grupos**:
-   - Adicione comentários no Dockerfile explicando a finalidade de cada usuário ou grupo.
-
-# 8. Quando Usar o Usuário Root
-Embora não seja recomendado, o usuário **root** pode ser necessário em casos específicos, como:
- - Instalar pacotes adicionais durante o build (`RUN apt-get ...`).
- - Configurar o sistema operacional ou permissões de arquivos.
- - Configurar serviços que exigem privilégios elevados.
-
-Se precisar usar o root, **retorne ao usuário não privilegiado** após realizar as ações necessárias.
-
-# 9. Exemplo Completo
-Um Dockerfile completo com boas práticas para criação e uso de usuários:
+1. **Documente Argumentos**:
+- Liste todos os argumentos no início do Dockerfile para facilitar a compreensão:
 
 dockerfile
 ```
-FROM ubuntu:20.04
-
-# Criar um grupo e um usuário
-RUN groupadd -r appgroup && useradd -r -g appgroup -m -d /home/appuser appuser
-
-# Configurar permissões para o diretório da aplicação
-RUN mkdir -p /app && chown appuser:appgroup /app
-
-# Definir o diretório de trabalho
-WORKDIR /app
-
-# Usar o usuário criado
-USER appuser
-
-# Copiar os arquivos
-COPY . .
-
-# Expor a porta da aplicação
-EXPOSE 8080
-
-# Comando para executar a aplicação
-CMD ["python3", "app.py"]
+ARG BASE_IMAGE
+ARG APP_VERSION
 ```
-# 10. Conclusão
-A instrução `USER` no Dockerfile é uma ferramenta essencial para configurar o ambiente de execução de forma segura e organizada. Ela permite evitar o uso desnecessário do **root** e minimizar riscos, ao mesmo tempo que oferece flexibilidade para configurar diferentes usuários e grupos dentro do contêiner.
+3. **Use ARG com Imagens Base Dinâmicas**:
+- Facilite a escolha de imagens base:
+
+dockerfile
+```
+ARG BASE_IMAGE=ubuntu:20.04
+FROM $BASE_IMAGE
+```
+4. **Combine ARG e ENV para Reutilização**:
+- Use `ARG` para configuração dinâmica e `ENV` para persistir variáveis no contêiner.
+
+# 9. Conclusão
+A instrução `ARG` é uma poderosa ferramenta para criar imagens Docker dinâmicas e configuráveis. Com ela, você pode ajustar os valores de build de maneira flexível, garantindo que sua imagem seja mais reutilizável e fácil de gerenciar.
 
 ## Resumo:
-- Use `USER` para reduzir privilégios e aumentar a segurança.
-- Combine `USER` com permissões corretas (`chown`) para evitar problemas de acesso.
-- Retorne para o usuário root apenas quando necessário, e documente essa prática.
+- **Disponibilidade**: Apenas durante o build.
+- **Usos**: Configuração dinâmica, escolha de imagens base, parametrização de builds.
+- **Melhores Práticas**: Combine com ENV para persistir valores importantes no contêiner.
 
-
- Se precisar de ajuda para ajustar usuários no Dockerfile ou configurar permissões, é só chamar! 🚀😊
+Se precisar de mais exemplos ou ajuda com um caso específico, é só perguntar! 🚀😊
