--- a/6 Avançado em Imagens Docker com Dockerfile/12.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/12.md
@@ -1,379 +1,122 @@
-# ENTRYPOINT vs CMD no Dockerfile
-As instruções `ENTRYPOINT` e `CMD no Dockerfile são usadas para definir o comando principal que será executado quando um contêiner for iniciado. Embora tenham funções similares, elas possuem diferenças importantes na forma como os comandos são tratados e sobrescritos.
+# EXPOSE no Dockerfile
+A instrução `EXPOSE` no Dockerfile documenta as **portas** que o contêiner utilizará para comunicação. Essa instrução é usada para indicar quais portas o serviço do contêiner escutará, **mas não publica ou mapeia as portas automaticamente**.
 
-# 1. Definições
-## CMD
-- **Uso principal**: Define o comando padrão que será executado no contêiner.
-- **Sobrescrevível**: O comando definido pelo `CMD` pode ser sobrescrito ao executar o contêiner.
+# 1. Funcionamento da Instrução EXPOSE
+- **Definição**: Declara que o contêiner estará escutando em uma ou mais portas específicas.
+- **Função**: Serve como documentação e pode ser usada por ferramentas de orquestração para configurar a rede do contêiner.
 
-### Sintaxe:
-
-dockerfile
-```
-CMD ["comando", "argumento1", "argumento2"]  # Forma exec
-CMD comando argumento1 argumento2           # Forma shell
-```
-## ENTRYPOINT
-- **Uso principal**: Define o comando principal do contêiner que será executado sempre.
-- **Fixo**: O `ENTRYPOINT` não é sobrescrito facilmente, mas pode aceitar argumentos adicionais.
-
-### Sintaxe:
+# 2. Sintaxe do EXPOSE
 
 dockerfile
 ```
-ENTRYPOINT ["comando", "argumento1"]  # Forma exec
-ENTRYPOINT comando argumento1         # Forma shell
+EXPOSE <porta>[/protocolo]
 ```
-# 2. Diferenças Principais
+- `<porta>`: Número da porta que o contêiner usará.
+- `/protocolo`: O protocolo pode ser `tcp` (padrão) ou `udp`. Se não especificado, o protocolo será `tcp`.
 
-| Aspecto               | `CMD`                                                     | `ENTRYPOINT`                            |
-| --------------------- | --------------------------------------------------------- | --------------------------------------- |
-| Objetivo              | Define um comando padrão.                                 | Define um comando obrigatório.          |
-| Sobrescrita           | Facilmente sobrescrito.                                   | Difícil de sobrescrever.                |
-| Argumentos Adicionais | Argumentos passados no `docker run` substituem o comando. | Argumentos são anexados ao comando.     |
-| Combinação com CMD    | Não se combina com `ENTRYPOINT`.                          | Pode usar `CMD` para argumentos padrão. |
+### Exemplos:
+1. Expor a porta 80 (HTTP):
 
-# 3. Exemplos Práticos
-## 3.1 Usando CMD
+dockerfile
+```
+EXPOSE 80
+```
+2. Expor a porta 53 com UDP:
+
+dockerfile
+```
+EXPOSE 53/udp
+```
+3. Expor múltiplas portas:
+
+dockerfile
+```
+EXPOSE 80 443 3000
+```
+# 3. EXPOSE na Prática
+## 3.1 Comportamento com `docker run`
+Mesmo declarada no Dockerfile, a porta não é publicada automaticamente. Você precisa usar a flag `-p` ou `-P` ao rodar o contêiner:
+
+1. **Mapear manualmente uma porta (`-p`)**:
+
+bash
+```
+docker run -p 8080:80 minha-imagem
+```
+- `8080:80`: A porta 8080 no host será mapeada para a porta 80 no contêiner.
+
+2. **Publicar todas as portas declaradas (`-P`)**:
+
+bash
+```
+docker run -P minha-imagem
+```
+- O Docker mapeia automaticamente todas as portas declaradas no `EXPOSE` para portas aleatórias no host.
+
+# 4. Exemplo Completo
+## Dockerfile
+Crie um Dockerfile para uma aplicação web simples:
+
+dockerfile
+```
+FROM nginx:alpine
+
+# Copiar um arquivo de exemplo para o servidor
+COPY index.html /usr/share/nginx/html/
+
+# Declarar a porta padrão do Nginx
+EXPOSE 80
+```
+## Construindo a Imagem
+1. Construa a imagem:
+
+bash
+```
+docker build -t minha-aplicacao .
+```
+2. Liste a imagem:
+
+bash
+```
+docker images
+```
+## Executando o Contêiner
+1. Execute a imagem mapeando manualmente a porta:
+
+bash
+```
+docker run -d -p 8080:80 minha-aplicacao
+```
+2. Acesse a aplicação no navegador:
+- http://localhost:8080
+
+3. Teste publicando automaticamente as portas (`-P`):
+
+bash
+```
+docker run -d -P minha-aplicacao
+```
+4. Verifique as portas publicadas:
+
+bash
+```
+docker ps
+```
+# 5. EXPOSE como Documentação
+A principal função do `EXPOSE` é documentar as portas usadas pela aplicação. Mesmo que você não publique as portas com `-p` ou `-P`, o EXPOSE informa a outros desenvolvedores e ferramentas como Kubernetes quais portas o contêiner está preparado para usar.
+
+
+## Exemplo com Múltiplas Portas
+Imagine uma aplicação que usa várias portas, como um servidor web e um banco de dados interno:
 
 dockerfile
 ```
 FROM ubuntu:20.04
-CMD ["echo", "Olá, mundo!"]
+
+# Expor portas para diferentes serviços
+EXPOSE 80      # Servidor web
+EXPOSE 3306    # Banco de dados MySQL
+EXPOSE 3000/tcp
+EXPOSE 4000/udp
+Esse Dockerfile informa que o contêiner escutará nas portas 80, 3306 (MySQL), 3000/tcp e 4000/udp.
 ```
-## Teste:
-bash
-```
-docker build -t cmd-example .
-docker run cmd-example
-```
-## Saída:
-
-css
-```
-Olá, mundo!
-Sobrescrevendo CMD:
-```
-bash
-```
-docker run cmd-example echo "Sobrescrevendo CMD"
-```
-## Saída:
-
-objectivec
-```
-Sobrescrevendo CMD
-```
-## 3.2 Usando ENTRYPOINT
-
-dockerfile
-```
-FROM ubuntu:20.04
-ENTRYPOINT ["echo", "Olá, mundo!"]
-```
-## Teste:
-bash
-```
-docker build -t entrypoint-example .
-docker run entrypoint-example
-```
-## Saída:
-
-css
-```
-Olá, mundo!
-Adicionando Argumentos ao ENTRYPOINT:
-```
-bash
-```
-docker run entrypoint-example "Adicionando Argumento"
-```
-## Saída:
-
-css
-```
-Olá, mundo! Adicionando Argumento
-```
-## 3.3 Combinando ENTRYPOINT e CMD
-Quando combinados, o `ENTRYPOINT` define o comando fixo e o `CMD` fornece argumentos padrão. Argumentos passados no `docker run` substituem os argumentos do `CMD`.
-
-dockerfile
-```
-FROM ubuntu:20.04
-ENTRYPOINT ["echo"]
-CMD ["Olá, mundo!"]
-```
-## Teste:
-1. **Comando padrão**:
-
-bash
-```
-docker build -t entrypoint-cmd-example .
-docker run entrypoint-cmd-example
-```
-## Saída:
-
-css
-```
-Olá, mundo!
-```
-2. **Sobrescrevendo CMD**:
-
-bash
-```
-docker run entrypoint-cmd-example "Sobrescrevendo CMD"
-```
-## Saída:
-
-objectivec
-```
-Sobrescrevendo CMD
-Sobrescrevendo tudo (usando --entrypoint):
-```
-bash
-```
-docker run --entrypoint "/bin/bash" entrypoint-cmd-example -c "echo Sobrescrevendo tudo"
-```
-## Saída:
-
-```
-Sobrescrevendo tudo
-```
-# 4. Quando Usar ENTRYPOINT e CMD
-## ENTRYPOINT
-- Use quando o contêiner tem uma única função fixa e obrigatória.
-- Exemplo: Um servidor ou script que sempre deve ser executado.
-
-dockerfile
-```
-ENTRYPOINT ["python", "app.py"]
-```
-## CMD
-- Use quando o comando principal pode variar ou ser substituído facilmente.
-- Exemplo: Uma imagem genérica que pode executar diferentes comandos.
-
-dockerfile
-```
-CMD ["bash"]
-```
-## ENTRYPOINT + CMD
-- Combine os dois para comandos fixos com argumentos configuráveis.
-- Exemplo: Uma aplicação que aceita argumentos padrão, mas permite customizações:
-
-dockerfile
-```
-ENTRYPOINT ["python", "app.py"]
-CMD ["--debug"]
-```
-# 5. Erros Comuns
-1. **Usar ENTRYPOINT quando CMD é suficiente**:
-   - Se o comando precisa ser flexível, prefira `CMD`.
-
-2. **Esquecer o Formato Exec**:
-   - O formato [`"comando", "arg1"`] é preferido ao formato shell (`comando arg1`), pois é mais seguro e previsível.
-
-3. **Não Testar Sobrescritas**:
-   - Sempre teste como o contêiner reage a argumentos no `docker run`.
-
-# 6. Boas Práticas
-1. **Prefira ENTRYPOINT para Comandos Fixos**:
-- Exemplo: Servidores que sempre precisam rodar:
-
-dockerfile
-```
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
-```
-2. **Use CMD para Argumentos Padrão**:
-- Exemplo: Configurações padrão de uma aplicação:
-
-dockerfile
-```
-CMD ["--config", "/default/config.yml"]
-```
-3. **Documente Comportamentos**:
-- Explique no Dockerfile como `ENTRYPOINT` e `CMD` interagem.
-
-3. **Testar Comportamento em Diferentes Cenários**:
-- Simule a execução com e sem argumentos para garantir a funcionalidade desejada.
-
-
-ENTRYPOINT vs CMD no Dockerfile
-As instruções ENTRYPOINT e CMD no Dockerfile são usadas para definir o comando principal que será executado quando um contêiner for iniciado. Embora tenham funções similares, elas possuem diferenças importantes na forma como os comandos são tratados e sobrescritos.
-
-1. Definições
-CMD
-Uso principal: Define o comando padrão que será executado no contêiner.
-Sobrescrevível: O comando definido pelo CMD pode ser sobrescrito ao executar o contêiner.
-Sintaxe:
-
-dockerfile
-Copiar código
-CMD ["comando", "argumento1", "argumento2"]  # Forma exec
-CMD comando argumento1 argumento2           # Forma shell
-ENTRYPOINT
-Uso principal: Define o comando principal do contêiner que será executado sempre.
-Fixo: O ENTRYPOINT não é sobrescrito facilmente, mas pode aceitar argumentos adicionais.
-Sintaxe:
-
-dockerfile
-Copiar código
-ENTRYPOINT ["comando", "argumento1"]  # Forma exec
-ENTRYPOINT comando argumento1         # Forma shell
-2. Diferenças Principais
-Aspecto	CMD	ENTRYPOINT
-Objetivo	Define um comando padrão.	Define um comando obrigatório.
-Sobrescrita	Facilmente sobrescrito.	Difícil de sobrescrever.
-Argumentos Adicionais	Argumentos passados no docker run substituem o comando.	Argumentos são anexados ao comando.
-Combinação com CMD	Não se combina com ENTRYPOINT.	Pode usar CMD para argumentos padrão.
-3. Exemplos Práticos
-3.1 Usando CMD
-dockerfile
-Copiar código
-FROM ubuntu:20.04
-CMD ["echo", "Olá, mundo!"]
-Teste:
-bash
-Copiar código
-docker build -t cmd-example .
-docker run cmd-example
-Saída:
-
-css
-Copiar código
-Olá, mundo!
-Sobrescrevendo CMD:
-bash
-Copiar código
-docker run cmd-example echo "Sobrescrevendo CMD"
-Saída:
-
-objectivec
-Copiar código
-Sobrescrevendo CMD
-3.2 Usando ENTRYPOINT
-dockerfile
-Copiar código
-FROM ubuntu:20.04
-ENTRYPOINT ["echo", "Olá, mundo!"]
-Teste:
-bash
-Copiar código
-docker build -t entrypoint-example .
-docker run entrypoint-example
-Saída:
-
-css
-Copiar código
-Olá, mundo!
-Adicionando Argumentos ao ENTRYPOINT:
-bash
-Copiar código
-docker run entrypoint-example "Adicionando Argumento"
-Saída:
-
-css
-Copiar código
-Olá, mundo! Adicionando Argumento
-3.3 Combinando ENTRYPOINT e CMD
-Quando combinados, o ENTRYPOINT define o comando fixo e o CMD fornece argumentos padrão. Argumentos passados no docker run substituem os argumentos do CMD.
-
-dockerfile
-Copiar código
-FROM ubuntu:20.04
-ENTRYPOINT ["echo"]
-CMD ["Olá, mundo!"]
-Teste:
-Comando padrão:
-
-bash
-Copiar código
-docker build -t entrypoint-cmd-example .
-docker run entrypoint-cmd-example
-Saída:
-
-css
-Copiar código
-Olá, mundo!
-Sobrescrevendo CMD:
-
-bash
-Copiar código
-docker run entrypoint-cmd-example "Sobrescrevendo CMD"
-Saída:
-
-objectivec
-Copiar código
-Sobrescrevendo CMD
-Sobrescrevendo tudo (usando --entrypoint):
-
-bash
-Copiar código
-docker run --entrypoint "/bin/bash" entrypoint-cmd-example -c "echo Sobrescrevendo tudo"
-Saída:
-
-Copiar código
-Sobrescrevendo tudo
-4. Quando Usar ENTRYPOINT e CMD
-ENTRYPOINT
-Use quando o contêiner tem uma única função fixa e obrigatória.
-Exemplo: Um servidor ou script que sempre deve ser executado.
-dockerfile
-Copiar código
-ENTRYPOINT ["python", "app.py"]
-CMD
-Use quando o comando principal pode variar ou ser substituído facilmente.
-Exemplo: Uma imagem genérica que pode executar diferentes comandos.
-dockerfile
-Copiar código
-CMD ["bash"]
-ENTRYPOINT + CMD
-Combine os dois para comandos fixos com argumentos configuráveis.
-Exemplo: Uma aplicação que aceita argumentos padrão, mas permite customizações:
-dockerfile
-Copiar código
-ENTRYPOINT ["python", "app.py"]
-CMD ["--debug"]
-5. Erros Comuns
-Usar ENTRYPOINT quando CMD é suficiente:
-
-Se o comando precisa ser flexível, prefira CMD.
-Esquecer o Formato Exec:
-
-O formato ["comando", "arg1"] é preferido ao formato shell (comando arg1), pois é mais seguro e previsível.
-Não Testar Sobrescritas:
-
-Sempre teste como o contêiner reage a argumentos no docker run.
-6. Boas Práticas
-Prefira ENTRYPOINT para Comandos Fixos:
-
-Exemplo: Servidores que sempre precisam rodar:
-dockerfile
-Copiar código
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
-Use CMD para Argumentos Padrão:
-
-Exemplo: Configurações padrão de uma aplicação:
-dockerfile
-Copiar código
-CMD ["--config", "/default/config.yml"]
-Documente Comportamentos:
-
-Explique no Dockerfile como ENTRYPOINT e CMD interagem.
-Testar Comportamento em Diferentes Cenários:
-
-Simule a execução com e sem argumentos para garantir a funcionalidade desejada.
-
-# 7. Resumo
-| Aspecto       | `CMD`                                 | `ENTRYPOINT`                         |
-| ------------- | ------------------------------------- | ------------------------------------ |
-| Sobrescrita   | Facilmente substituível.              | Difícil de substituir.               |
-| Objetivo      | Comando padrão opcional.              | Comando fixo obrigatório.            |
-| Flexibilidade | Mais flexível para imagens genéricas. | Ideal para imagens com função única. |
-
-
-## Escolha Rápida:
-- **CMD**: Quando o comando pode ser alterado facilmente.
-- **ENTRYPOINT**: Quando o comando é fixo e essencial.
-- **ENTRYPOINT + CMD**: Para definir comandos fixos com argumentos padrão.
-
-Se precisar de mais exemplos ou detalhes sobre como usar ENTRYPOINT e CMD, é só chamar! 🚀😊
