--- a/6 Avançado em Imagens Docker com Dockerfile/13.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/13.md
@@ -1,276 +1,240 @@
-# Principais Comandos para Gerenciar Imagens no Docker
-Gerenciar imagens no Docker é essencial para criar, inspecionar, otimizar e compartilhar ambientes de execução. Abaixo, você encontrará os comandos mais utilizados para trabalhar com imagens no Docker, explicados com exemplos práticos.
+# USER no Dockerfile
+A instrução `USER` no Dockerfile define qual **usuário** será usado para executar os comandos dentro do contêiner, incluindo os comandos especificados em instruções como `RUN`, `CMD`, e `ENTRYPOINT`. Por padrão, os contêineres são executados como o usuário **root**, o que pode representar riscos de segurança.
 
-# 1. Criando Imagens
-## 1.1 Build de uma Imagem
-Cria uma imagem a partir de um Dockerfile.
-
-bash
-```
-docker build -t <nome-da-imagem>:<tag> <caminho-do-contexto>
-```
-- `-t`: Define o nome e a tag da imagem.
-- `<caminho-do-contexto>`: Diretório onde está o Dockerfile.
-
-## Exemplo:
-
-bash
-```
-docker build -t minha-aplicacao:1.0 .
-```
-# 2. Listando Imagens
-## 2.1 Exibir Imagens Disponíveis
-bash
-```
-docker images
-```
-### Saída:
-
-wasm
-```
-REPOSITORY            TAG       IMAGE ID       CREATED        SIZE
-minha-aplicacao       1.0       a1b2c3d4e5f6   5 hours ago    150MB
-ubuntu                latest    f643c72bc252   2 weeks ago    29MB
-```
-- **REPOSITORY**: Nome do repositório da imagem.
-- **TAG**: Versão da imagem.
-- **IMAGE ID**: Identificador único da imagem.
-
-# 3. Inspecionando Imagens
-## 3.1 Verificar Detalhes da Imagem
-bash
-```
-docker inspect <IMAGE_ID ou nome:tag>
-```
-### Exemplo:
-
-bash
-```
-docker inspect minha-aplicacao:1.0
-```
-- Mostra informações detalhadas, como camadas, variáveis de ambiente, volumes, e metadados.
-
-## 3.2 Ver Histórico de Camadas
-bash
-```
-docker history <IMAGE_ID ou nome:tag>
-```
-### Exemplo:
-
-bash
-```
-docker history minha-aplicacao:1.0
-```
-### Saída:
-
-r
-```
-IMAGE          CREATED         CREATED BY                                      SIZE
-a1b2c3d4e5f6   10 hours ago    /bin/sh -c apt-get install -y curl             120MB
-<missing>      12 hours ago    /bin/sh -c apt-get update                      23MB
-```
-- **CREATED BY**: Comando executado no Dockerfile.
-- **SIZE**: Tamanho da camada criada.
-
-# 4. Compartilhando Imagens
-## 4.1 Taggear uma Imagem
-Atribui um novo nome e tag a uma imagem existente.
-
-bash
-```
-docker tag <imagem:tag> <novo-nome:tag>
-```
-
-### Exemplo:
-
-bash
-```
-docker tag minha-aplicacao:1.0 meu-repo/minha-aplicacao:latest
-```
-# 4.2 Enviar para um Repositório
-Publica a imagem em um repositório (como Docker Hub ou um registro privado).
-
-bash
-```
-docker push <nome-do-repositório:tag>
-```
-### Exemplo:
-
-bash
-```
-docker push meu-repo/minha-aplicacao:latest
-```
-## 4.3 Fazer Pull de uma Imagem
-Baixa uma imagem de um repositório remoto.
-
-bash
-```
-docker pull <nome-do-repositório:tag>
-```
-### Exemplo:
-
-bash
-```
-docker pull nginx:latest
-```
-# 5. Removendo Imagens
-## 5.1 Remover uma Imagem
-bash
-```
-docker rmi <IMAGE_ID ou nome:tag>
-```
-### Exemplo:
-
-bash
-```
-docker rmi minha-aplicacao:1.0
-```
-## 5.2 Forçar Remoção
-Remove imagens em uso ou associadas a contêineres.
-
-bash
-```
-docker rmi -f <IMAGE_ID>
-```
-### Exemplo:
-
-bash
-```
-docker rmi -f a1b2c3d4e5f6
-```
-# 5.3 Remover Imagens Não Utilizadas
-Remove todas as imagens que não estão associadas a contêineres ativos.
-
-bash
-```
-docker image prune
-```
-Para remover **todas** as imagens não usadas, incluindo aquelas sem tags:
-
-bash
-```
-docker image prune -a
-```
-# 6. Gerenciando Tamanhos e Camadas
-## 6.1 Verificar Tamanho das Imagens
-bash
-```
-docker images
-```
-## 6.2 Comprimir Imagens com Multistage Builds
-Use o Dockerfile para criar imagens menores, separando etapas de build e execução:
+# 1. Sintaxe do USER
 
 dockerfile
 ```
-# Etapa de Build
-FROM node:16 AS build
+USER <nome_do_usuário>[:grupo]
+```
+- `<nome_do_usuário>`: Define o nome ou o ID do usuário.
+- `[:grupo]`: (Opcional) Define o grupo do usuário. Se não for especificado, o Docker usará o grupo padrão do usuário.
+
+## Exemplos:
+1. Usar o usuário `nobody`:
+
+dockerfile
+```
+USER nobody
+```
+
+2. Usar um usuário com grupo específico:
+
+dockerfile
+```
+USER myuser:mygroup
+```
+
+3. Usar IDs numéricos:
+
+dockerfile
+```
+USER 1001:1001
+```
+# 2. Por Que Usar USER?
+1. **Segurança**:
+   - Reduz privilégios, minimizando os riscos em caso de falhas ou ataques.
+   - Evita que processos maliciosos comprometam o sistema host.
+
+2. **Isolamento**:
+   - Diferentes usuários podem ser configurados para tarefas específicas no contêiner.
+
+3. **Boas Práticas**:
+   - É uma prática recomendada nunca executar contêineres como **root**, a menos que seja estritamente necessário.
+
+# 3. Criando e Usando Usuários no Dockerfile
+Se o usuário que você deseja usar não existir na imagem base, é necessário criá-lo antes de configurá-lo com a instrução `USER`.
+
+## 3.1 Criar um Usuário no Dockerfile
+Você pode usar o comando `RUN` para criar um novo usuário e grupo.
+
+## Exemplo:
+
+dockerfile
+```
+FROM ubuntu:20.04
+
+# Criar um usuário e um grupo
+RUN groupadd -r mygroup && useradd -r -g mygroup myuser
+
+# Definir o usuário para os comandos subsequentes
+USER myuser
+```
+## 3.2 Usar um Diretório de Trabalho Personalizado
+Se o contêiner precisa de um diretório de trabalho específico, crie-o com as permissões corretas antes de usar `USER`.
+
+### Exemplo:
+
+dockerfile
+```
+FROM ubuntu:20.04
+
+# Criar um usuário e definir o diretório de trabalho
+RUN useradd -m -d /home/myuser myuser
+RUN mkdir -p /app && chown myuser:myuser /app
+
+# Alterar para o diretório de trabalho
 WORKDIR /app
-COPY package.json .
-RUN npm install
+
+# Usar o usuário criado
+USER myuser
+
+# Adicionar os arquivos
 COPY . .
-RUN npm run build
+CMD ["bash"]
+```
+## 3.3 Reverter para Root (Se Necessário)
+Caso você precise executar comandos como **root** temporariamente, use `USER root` no Dockerfile para reverter os privilégios.
 
-# Etapa Final
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
-```
-## 6.3 Ferramentas para Inspeção
-- **dive**: Inspeciona camadas de imagens para identificar desperdícios.
-bash
-```
-dive <IMAGE_ID ou nome:tag>
-```
-# 7. Salvando e Restaurando Imagens
-## 7.1 Exportar Imagem para um Arquivo
-Salva uma imagem como um arquivo `.tar` no sistema local.
-
-bash
-```
-docker save -o <arquivo.tar> <IMAGE_ID ou nome:tag>
-```
 ### Exemplo:
 
-bash
+dockerfile
 ```
-docker save -o minha-aplicacao.tar minha-aplicacao:1.0
+FROM ubuntu:20.04
+
+# Criar um usuário
+RUN useradd -m -d /home/myuser myuser
+
+# Usar o usuário criado
+USER myuser
+
+# Reverter temporariamente para root
+USER root
+RUN apt-get update && apt-get install -y curl
+
+# Voltar para o usuário criado
+USER myuser
 ```
-# 7.2 Importar Imagem de um Arquivo
-Carrega uma imagem previamente salva.
+# 4. Testando o Usuário no Contêiner
+## Passo 1: Criar o Dockerfile
+
+dockerfile
+```
+FROM ubuntu:20.04
+
+# Criar usuário e diretório de trabalho
+RUN useradd -m -d /home/myuser myuser
+WORKDIR /home/myuser
+
+# Usar o usuário criado
+USER myuser
+
+CMD ["whoami"]
+```
+## Passo 2: Construir a Imagem
 
 bash
 ```
-docker load -i <arquivo.tar>
+docker build -t teste-user .
 ```
-### Exemplo:
+## Passo 3: Executar o Contêiner
 
 bash
 ```
-docker load -i minha-aplicacao.tar
+docker run --rm teste-user
 ```
-# 8. Trabalhando com Registros Privados
-## 8.1 Logar em um Registro
-Para enviar ou baixar imagens de registros privados, você precisa autenticar-se.
+### Saída Esperada:
+
+```
+myuser
+```
+# 5. Sobrescrevendo o Usuário em Tempo de Execução
+Se você quiser executar um contêiner com um usuário diferente daquele especificado no Dockerfile, use a flag `--use`r ao executar o contêiner:
+
+## Exemplo:
+bash
+```
+docker run --user 1000:1000 minha-imagem
+```
+Aqui:
+
+- `1000:1000`: O contêiner será executado com o usuário de ID `1000` e grupo `1000`.
+
+# 6. Verificando o Usuário no Contêiner
+Você pode usar os seguintes comandos dentro do contêiner para verificar o usuário atual:
+
+1. **Verificar o Nome do Usuário**:
 
 bash
 ```
-docker login <url-do-registro>
+whoami
 ```
-### Exemplo:
+2. **Verificar o ID do Usuário**:
 
 bash
 ```
-docker login registry.example.com
+id
 ```
-# 8.2 Configurar um Registro Privado
-Execute um registro local usando o contêiner oficial:
+### Saída Exemplo:
 
-bash
+scss
 ```
-docker run -d -p 5000:5000 --name registry registry:2
+uid=1001(myuser) gid=1001(mygroup) groups=1001(mygroup)
 ```
-Enviar uma imagem para o registro:
+# 7. Boas Práticas com USER
+1. **Sempre Evite Root**:
+   - Use `USER` para reduzir privilégios sempre que possível.
 
-bash
-```
-docker tag minha-aplicacao:1.0 localhost:5000/minha-aplicacao:1.0
-docker push localhost:5000/minha-aplicacao:1.0
-```
-Baixar a imagem do registro:
+2. **Crie Usuários em Imagens Base Minimalistas**:
+   - Imagens como **Alpine** não possuem comandos como `useradd` ou `groupadd`. Use:
 
-bash
+dockerfile
 ```
-docker pull localhost:5000/minha-aplicacao:1.0
+RUN addgroup -S mygroup && adduser -S myuser -G mygroup
 ```
-# 9. Atualizando Imagens
-## 9.1 Atualizar Dependências e Recriar a Imagem
-Edite o Dockerfile e reconstrua a imagem:
+3. **Gerencie Permissões Corretamente**:
+   - Certifique-se de que os arquivos e diretórios necessários no contêiner têm permissões corretas:
 
-bash
+dockerfile
 ```
-docker build -t minha-aplicacao:2.0 .
+RUN chown myuser:mygroup /path/to/files
 ```
-# 10. Dicas e Boas Práticas
-1. **Nomeie e Tag suas Imagens**:
-   - Use nomes e tags significativos:
-bash
-```
-minha-aplicacao:versao1.0
-```
-2. **Use Multistage Builds**:
-   - Reduza o tamanho da imagem, separando etapas de build e execução.
+4. **Documente Usuários e Grupos**:
+   - Adicione comentários no Dockerfile explicando a finalidade de cada usuário ou grupo.
 
-3. **Remova Imagens Não Usadas**:
-   - Regularmente limpe imagens não usadas para economizar espaço:
+# 8. Quando Usar o Usuário Root
+Embora não seja recomendado, o usuário **root** pode ser necessário em casos específicos, como:
+ - Instalar pacotes adicionais durante o build (`RUN apt-get ...`).
+ - Configurar o sistema operacional ou permissões de arquivos.
+ - Configurar serviços que exigem privilégios elevados.
 
-bash
+Se precisar usar o root, **retorne ao usuário não privilegiado** após realizar as ações necessárias.
+
+# 9. Exemplo Completo
+Um Dockerfile completo com boas práticas para criação e uso de usuários:
+
+dockerfile
 ```
-docker image prune -a
+FROM ubuntu:20.04
+
+# Criar um grupo e um usuário
+RUN groupadd -r appgroup && useradd -r -g appgroup -m -d /home/appuser appuser
+
+# Configurar permissões para o diretório da aplicação
+RUN mkdir -p /app && chown appuser:appgroup /app
+
+# Definir o diretório de trabalho
+WORKDIR /app
+
+# Usar o usuário criado
+USER appuser
+
+# Copiar os arquivos
+COPY . .
+
+# Expor a porta da aplicação
+EXPOSE 8080
+
+# Comando para executar a aplicação
+CMD ["python3", "app.py"]
 ```
-4. **Audite Imagens**:
-   - Use ferramentas como `trivy` ou `docker scan` para verificar vulnerabilidades:
-bash
-```
-docker scan minha-aplicacao:1.0
-```
+# 10. Conclusão
+A instrução `USER` no Dockerfile é uma ferramenta essencial para configurar o ambiente de execução de forma segura e organizada. Ela permite evitar o uso desnecessário do **root** e minimizar riscos, ao mesmo tempo que oferece flexibilidade para configurar diferentes usuários e grupos dentro do contêiner.
+
+## Resumo:
+- Use `USER` para reduzir privilégios e aumentar a segurança.
+- Combine `USER` com permissões corretas (`chown`) para evitar problemas de acesso.
+- Retorne para o usuário root apenas quando necessário, e documente essa prática.
+
+
+ Se precisar de ajuda para ajustar usuários no Dockerfile ou configurar permissões, é só chamar! 🚀😊
