--- a/6 Avançado em Imagens Docker com Dockerfile/14.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/14.md
@@ -1,202 +1,379 @@
-# Criando uma Imagem Docker para uma Aplicação com Dockerfile
-Neste exemplo, criaremos uma imagem Docker para uma aplicação **Node.js** simples com um **Dockerfile**. Vamos construir uma aplicação que retorna "Olá, Docker!" e entender cada passo para criar a imagem.
+# ENTRYPOINT vs CMD no Dockerfile
+As instruções `ENTRYPOINT` e `CMD no Dockerfile são usadas para definir o comando principal que será executado quando um contêiner for iniciado. Embora tenham funções similares, elas possuem diferenças importantes na forma como os comandos são tratados e sobrescritos.
 
-# 1. Estrutura do Projeto
-Organize os arquivos da seguinte forma:
+# 1. Definições
+## CMD
+- **Uso principal**: Define o comando padrão que será executado no contêiner.
+- **Sobrescrevível**: O comando definido pelo `CMD` pode ser sobrescrito ao executar o contêiner.
 
-bash
-```
-minha-aplicacao/
-│
-├── app.js                 # Código da aplicação Node.js
-├── package.json           # Configurações e dependências da aplicação
-└── Dockerfile             # Arquivo de configuração para criar a imagem Docker
-```
-# 2. Criando os Arquivos
-## 2.1 Código da Aplicação - app.js
-Crie um servidor básico com o Node.js:
-
-javascript
-```
-const express = require('express');
-const app = express();
-const port = process.env.PORT || 3000;
-
-app.get('/', (req, res) => {
-    res.send('Olá, Docker!');
-});
-
-app.listen(port, () => {
-    console.log(`Servidor rodando em http://localhost:${port}`);
-});
-```
-## 2.2 Configurações do Projeto - `package.json`
-Adicione as dependências necessárias para o projeto:
-
-json
-```
-{
-  "name": "minha-aplicacao",
-  "version": "1.0.0",
-  "description": "Exemplo de aplicação Docker com Node.js",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
-}
-```
-Instale as dependências executando no terminal, dentro do diretório do projeto:
-
-bash
-```
-npm install
-```
-## 2.3 Criando o Dockerfile
-O **Dockerfile** contém as instruções para criar a imagem da aplicação. Aqui está o exemplo completo:
+### Sintaxe:
 
 dockerfile
 ```
-# Etapa 1: Usar uma imagem base do Node.js
-FROM node:16
-
-# Etapa 2: Definir o diretório de trabalho no contêiner
-WORKDIR /usr/src/app
-
-# Etapa 3: Copiar os arquivos de configuração e instalar dependências
-COPY package*.json ./
-RUN npm install
-
-# Etapa 4: Copiar o restante do código para o contêiner
-COPY . .
-
-# Etapa 5: Expor a porta da aplicação
-EXPOSE 3000
-
-# Etapa 6: Definir o comando para iniciar a aplicação
-CMD ["npm", "start"]
+CMD ["comando", "argumento1", "argumento2"]  # Forma exec
+CMD comando argumento1 argumento2           # Forma shell
 ```
-# 3. Construindo a Imagem
-1. Navegue até o diretório do projeto:
+## ENTRYPOINT
+- **Uso principal**: Define o comando principal do contêiner que será executado sempre.
+- **Fixo**: O `ENTRYPOINT` não é sobrescrito facilmente, mas pode aceitar argumentos adicionais.
 
+### Sintaxe:
+
+dockerfile
+```
+ENTRYPOINT ["comando", "argumento1"]  # Forma exec
+ENTRYPOINT comando argumento1         # Forma shell
+```
+# 2. Diferenças Principais
+
+| Aspecto               | `CMD`                                                     | `ENTRYPOINT`                            |
+| --------------------- | --------------------------------------------------------- | --------------------------------------- |
+| Objetivo              | Define um comando padrão.                                 | Define um comando obrigatório.          |
+| Sobrescrita           | Facilmente sobrescrito.                                   | Difícil de sobrescrever.                |
+| Argumentos Adicionais | Argumentos passados no `docker run` substituem o comando. | Argumentos são anexados ao comando.     |
+| Combinação com CMD    | Não se combina com `ENTRYPOINT`.                          | Pode usar `CMD` para argumentos padrão. |
+
+# 3. Exemplos Práticos
+## 3.1 Usando CMD
+
+dockerfile
+```
+FROM ubuntu:20.04
+CMD ["echo", "Olá, mundo!"]
+```
+## Teste:
 bash
 ```
-cd minha-aplicacao
+docker build -t cmd-example .
+docker run cmd-example
 ```
-2. Execute o comando para construir a imagem:
-
-bash
-```
-docker build -t minha-aplicacao:1.0 .
-```
-- `-t minha-aplicacao:1.0`: Nomeia a imagem como `minha-aplicacao` e define a tag como `1.0`.
-- `.`: O ponto indica o diretório atual como contexto de build.
-
-# 4. Executando a Imagem
-Depois de criar a imagem, você pode executar um contêiner baseado nela.
-
-1. **Iniciar o contêiner e mapear portas**:
-
-bash
-```
-docker run -d -p 3000:3000 minha-aplicacao:1.0
-```
-- `-d`: Executa o contêiner em segundo plano.
-- `-p 3000:3000`: Mapeia a porta 3000 do host para a porta 3000 do contêiner.
-
-2. **Testar a aplicação**: Acesse no navegador ou com um comando `curl`:
-
-bash
-```
-curl http://localhost:3000
-```
-### Saída esperada:
+## Saída:
 
 css
 ```
-Olá, Docker!
+Olá, mundo!
+Sobrescrevendo CMD:
 ```
-# 5. Gerenciando o Contêiner
-## 5.1 Verificar Contêineres Ativos
 bash
 ```
-docker ps
+docker run cmd-example echo "Sobrescrevendo CMD"
 ```
-## 5.2 Parar o Contêiner
-bash
-```
-docker stop <CONTAINER_ID>
-```
-## 5.3 Remover o Contêiner
-bash
-```
-docker rm <CONTAINER_ID>
-```
-# 6. Publicando a Imagem
-Você pode compartilhar sua imagem com outras pessoas ou sistemas usando um repositório, como o Docker Hub.
+## Saída:
 
-## 6.1 Taggear a Imagem
-bash
+objectivec
 ```
-docker tag minha-aplicacao:1.0 meu-usuario/minha-aplicacao:1.0
+Sobrescrevendo CMD
 ```
-## 6.2 Fazer Login no Docker Hub
-bash
-```
-docker login
-```
-## 6.3 Enviar a Imagem para o Docker Hub
-bash
-```
-docker push meu-usuario/minha-aplicacao:1.0
-```
-# 7. Melhorando o Dockerfile
-## 7.1 Reduzindo o Tamanho da Imagem
-Use uma imagem base mais leve, como `node:16-alpine`:
+## 3.2 Usando ENTRYPOINT
 
 dockerfile
 ```
-FROM node:16-alpine
+FROM ubuntu:20.04
+ENTRYPOINT ["echo", "Olá, mundo!"]
 ```
-## 7.2 Usando .dockerignore
-Evite incluir arquivos desnecessários na imagem, criando um arquivo `.dockerignore`:
-
-**Exemplo** `.dockerignore`:
-
+## Teste:
 bash
 ```
-node_modules
-*.log
-.git
-Dockerfile
+docker build -t entrypoint-example .
+docker run entrypoint-example
 ```
-# 8. Multistage Build para Otimização
-Se a aplicação exigir etapas de build (como em React ou Angular), use **Multistage Build** para criar imagens menores:
+## Saída:
+
+css
+```
+Olá, mundo!
+Adicionando Argumentos ao ENTRYPOINT:
+```
+bash
+```
+docker run entrypoint-example "Adicionando Argumento"
+```
+## Saída:
+
+css
+```
+Olá, mundo! Adicionando Argumento
+```
+## 3.3 Combinando ENTRYPOINT e CMD
+Quando combinados, o `ENTRYPOINT` define o comando fixo e o `CMD` fornece argumentos padrão. Argumentos passados no `docker run` substituem os argumentos do `CMD`.
 
 dockerfile
 ```
-# Etapa 1: Build
-FROM node:16 AS build
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
-
-# Etapa 2: Execução
-FROM node:16-alpine
-WORKDIR /app
-COPY --from=build /usr/src/app/dist /app
-EXPOSE 3000
-CMD ["node", "app.js"]
+FROM ubuntu:20.04
+ENTRYPOINT ["echo"]
+CMD ["Olá, mundo!"]
 ```
-# 9. Conclusão
-Você criou uma imagem Docker para uma aplicação Node.js e aprendeu a:
-- Estruturar o projeto.
-- Escrever um Dockerfile.
-- Construir e executar a imagem.
-- Publicar e otimizar a imagem.
+## Teste:
+1. **Comando padrão**:
 
-Essa abordagem pode ser adaptada para qualquer aplicação. Se precisar de mais exemplos ou otimizações, é só perguntar! 🚀😊
+bash
+```
+docker build -t entrypoint-cmd-example .
+docker run entrypoint-cmd-example
+```
+## Saída:
+
+css
+```
+Olá, mundo!
+```
+2. **Sobrescrevendo CMD**:
+
+bash
+```
+docker run entrypoint-cmd-example "Sobrescrevendo CMD"
+```
+## Saída:
+
+objectivec
+```
+Sobrescrevendo CMD
+Sobrescrevendo tudo (usando --entrypoint):
+```
+bash
+```
+docker run --entrypoint "/bin/bash" entrypoint-cmd-example -c "echo Sobrescrevendo tudo"
+```
+## Saída:
+
+```
+Sobrescrevendo tudo
+```
+# 4. Quando Usar ENTRYPOINT e CMD
+## ENTRYPOINT
+- Use quando o contêiner tem uma única função fixa e obrigatória.
+- Exemplo: Um servidor ou script que sempre deve ser executado.
+
+dockerfile
+```
+ENTRYPOINT ["python", "app.py"]
+```
+## CMD
+- Use quando o comando principal pode variar ou ser substituído facilmente.
+- Exemplo: Uma imagem genérica que pode executar diferentes comandos.
+
+dockerfile
+```
+CMD ["bash"]
+```
+## ENTRYPOINT + CMD
+- Combine os dois para comandos fixos com argumentos configuráveis.
+- Exemplo: Uma aplicação que aceita argumentos padrão, mas permite customizações:
+
+dockerfile
+```
+ENTRYPOINT ["python", "app.py"]
+CMD ["--debug"]
+```
+# 5. Erros Comuns
+1. **Usar ENTRYPOINT quando CMD é suficiente**:
+   - Se o comando precisa ser flexível, prefira `CMD`.
+
+2. **Esquecer o Formato Exec**:
+   - O formato [`"comando", "arg1"`] é preferido ao formato shell (`comando arg1`), pois é mais seguro e previsível.
+
+3. **Não Testar Sobrescritas**:
+   - Sempre teste como o contêiner reage a argumentos no `docker run`.
+
+# 6. Boas Práticas
+1. **Prefira ENTRYPOINT para Comandos Fixos**:
+- Exemplo: Servidores que sempre precisam rodar:
+
+dockerfile
+```
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
+```
+2. **Use CMD para Argumentos Padrão**:
+- Exemplo: Configurações padrão de uma aplicação:
+
+dockerfile
+```
+CMD ["--config", "/default/config.yml"]
+```
+3. **Documente Comportamentos**:
+- Explique no Dockerfile como `ENTRYPOINT` e `CMD` interagem.
+
+3. **Testar Comportamento em Diferentes Cenários**:
+- Simule a execução com e sem argumentos para garantir a funcionalidade desejada.
+
+
+ENTRYPOINT vs CMD no Dockerfile
+As instruções ENTRYPOINT e CMD no Dockerfile são usadas para definir o comando principal que será executado quando um contêiner for iniciado. Embora tenham funções similares, elas possuem diferenças importantes na forma como os comandos são tratados e sobrescritos.
+
+1. Definições
+CMD
+Uso principal: Define o comando padrão que será executado no contêiner.
+Sobrescrevível: O comando definido pelo CMD pode ser sobrescrito ao executar o contêiner.
+Sintaxe:
+
+dockerfile
+Copiar código
+CMD ["comando", "argumento1", "argumento2"]  # Forma exec
+CMD comando argumento1 argumento2           # Forma shell
+ENTRYPOINT
+Uso principal: Define o comando principal do contêiner que será executado sempre.
+Fixo: O ENTRYPOINT não é sobrescrito facilmente, mas pode aceitar argumentos adicionais.
+Sintaxe:
+
+dockerfile
+Copiar código
+ENTRYPOINT ["comando", "argumento1"]  # Forma exec
+ENTRYPOINT comando argumento1         # Forma shell
+2. Diferenças Principais
+Aspecto	CMD	ENTRYPOINT
+Objetivo	Define um comando padrão.	Define um comando obrigatório.
+Sobrescrita	Facilmente sobrescrito.	Difícil de sobrescrever.
+Argumentos Adicionais	Argumentos passados no docker run substituem o comando.	Argumentos são anexados ao comando.
+Combinação com CMD	Não se combina com ENTRYPOINT.	Pode usar CMD para argumentos padrão.
+3. Exemplos Práticos
+3.1 Usando CMD
+dockerfile
+Copiar código
+FROM ubuntu:20.04
+CMD ["echo", "Olá, mundo!"]
+Teste:
+bash
+Copiar código
+docker build -t cmd-example .
+docker run cmd-example
+Saída:
+
+css
+Copiar código
+Olá, mundo!
+Sobrescrevendo CMD:
+bash
+Copiar código
+docker run cmd-example echo "Sobrescrevendo CMD"
+Saída:
+
+objectivec
+Copiar código
+Sobrescrevendo CMD
+3.2 Usando ENTRYPOINT
+dockerfile
+Copiar código
+FROM ubuntu:20.04
+ENTRYPOINT ["echo", "Olá, mundo!"]
+Teste:
+bash
+Copiar código
+docker build -t entrypoint-example .
+docker run entrypoint-example
+Saída:
+
+css
+Copiar código
+Olá, mundo!
+Adicionando Argumentos ao ENTRYPOINT:
+bash
+Copiar código
+docker run entrypoint-example "Adicionando Argumento"
+Saída:
+
+css
+Copiar código
+Olá, mundo! Adicionando Argumento
+3.3 Combinando ENTRYPOINT e CMD
+Quando combinados, o ENTRYPOINT define o comando fixo e o CMD fornece argumentos padrão. Argumentos passados no docker run substituem os argumentos do CMD.
+
+dockerfile
+Copiar código
+FROM ubuntu:20.04
+ENTRYPOINT ["echo"]
+CMD ["Olá, mundo!"]
+Teste:
+Comando padrão:
+
+bash
+Copiar código
+docker build -t entrypoint-cmd-example .
+docker run entrypoint-cmd-example
+Saída:
+
+css
+Copiar código
+Olá, mundo!
+Sobrescrevendo CMD:
+
+bash
+Copiar código
+docker run entrypoint-cmd-example "Sobrescrevendo CMD"
+Saída:
+
+objectivec
+Copiar código
+Sobrescrevendo CMD
+Sobrescrevendo tudo (usando --entrypoint):
+
+bash
+Copiar código
+docker run --entrypoint "/bin/bash" entrypoint-cmd-example -c "echo Sobrescrevendo tudo"
+Saída:
+
+Copiar código
+Sobrescrevendo tudo
+4. Quando Usar ENTRYPOINT e CMD
+ENTRYPOINT
+Use quando o contêiner tem uma única função fixa e obrigatória.
+Exemplo: Um servidor ou script que sempre deve ser executado.
+dockerfile
+Copiar código
+ENTRYPOINT ["python", "app.py"]
+CMD
+Use quando o comando principal pode variar ou ser substituído facilmente.
+Exemplo: Uma imagem genérica que pode executar diferentes comandos.
+dockerfile
+Copiar código
+CMD ["bash"]
+ENTRYPOINT + CMD
+Combine os dois para comandos fixos com argumentos configuráveis.
+Exemplo: Uma aplicação que aceita argumentos padrão, mas permite customizações:
+dockerfile
+Copiar código
+ENTRYPOINT ["python", "app.py"]
+CMD ["--debug"]
+5. Erros Comuns
+Usar ENTRYPOINT quando CMD é suficiente:
+
+Se o comando precisa ser flexível, prefira CMD.
+Esquecer o Formato Exec:
+
+O formato ["comando", "arg1"] é preferido ao formato shell (comando arg1), pois é mais seguro e previsível.
+Não Testar Sobrescritas:
+
+Sempre teste como o contêiner reage a argumentos no docker run.
+6. Boas Práticas
+Prefira ENTRYPOINT para Comandos Fixos:
+
+Exemplo: Servidores que sempre precisam rodar:
+dockerfile
+Copiar código
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
+Use CMD para Argumentos Padrão:
+
+Exemplo: Configurações padrão de uma aplicação:
+dockerfile
+Copiar código
+CMD ["--config", "/default/config.yml"]
+Documente Comportamentos:
+
+Explique no Dockerfile como ENTRYPOINT e CMD interagem.
+Testar Comportamento em Diferentes Cenários:
+
+Simule a execução com e sem argumentos para garantir a funcionalidade desejada.
+
+# 7. Resumo
+| Aspecto       | `CMD`                                 | `ENTRYPOINT`                         |
+| ------------- | ------------------------------------- | ------------------------------------ |
+| Sobrescrita   | Facilmente substituível.              | Difícil de substituir.               |
+| Objetivo      | Comando padrão opcional.              | Comando fixo obrigatório.            |
+| Flexibilidade | Mais flexível para imagens genéricas. | Ideal para imagens com função única. |
+
+
+## Escolha Rápida:
+- **CMD**: Quando o comando pode ser alterado facilmente.
+- **ENTRYPOINT**: Quando o comando é fixo e essencial.
+- **ENTRYPOINT + CMD**: Para definir comandos fixos com argumentos padrão.
+
+Se precisar de mais exemplos ou detalhes sobre como usar ENTRYPOINT e CMD, é só chamar! 🚀😊
